# Prompt808

./: .gitignore  LICENSE  PIPELINE.md  README.md  __init__.py  bridge_node.py  library_select_node.py  models.json  pyproject.toml  requirements.txt
example_workflows/: prompt808.json
js/: analyze.js  api.js  archetypes.js  generate.js  library.js  photos.js  prompt808.css  prompt808.js  prompt808_bridge.js  prompt808_library_select.js  style.js  utils.js
server/: routes.py
server/api/: analysis.py  generation.py  libraries.py  library.py  style.py
server/core/: analyzer.py  archetypes.py  coherence.py  database.py  embeddings.py  generator.py  image_embeddings.py  json_parser.py  library_manager.py  model_manager.py  prompt_cache.py  style_profile.py
server/plugins/export/: __init__.py  _import.py  export.py
server/store/: archetypes.py  elements.py  vocabulary.py
